--- a/composer.json
+++ b/composer.json
@@ -4,7 +4,9 @@
     "type": "library",
 
     "require": {
-        "php": ">=7.0.0"
+        "php": ">=7.0.0",
+        "guzzlehttp/promises": "^1.2",
+        "react/event-loop": "^0.4.2"
     },
     "require-dev": {
         "phpunit/phpunit": "5.*"
