--- a/composer.json
+++ b/composer.json
@@ -5,8 +5,8 @@
 
     "require": {
         "php": ">=7.0.0",
-        "guzzlehttp/promises": "^1.2",
-        "react/event-loop": "^0.4.2"
+        "react/event-loop": "^0.4.2",
+        "react/promise": "^2.4"
     },
     "require-dev": {
         "phpunit/phpunit": "5.*"
