--- a/composer.json
+++ b/composer.json
@@ -6,7 +6,8 @@
     "require": {
         "php": ">=7.0.0",
         "react/event-loop": "^0.4.2",
-        "react/promise": "^2.4"
+        "react/promise": "^2.4",
+        "phpcurl/curlwrapper": "^1.0"
     },
     "require-dev": {
         "phpunit/phpunit": "5.*"
