--- a/composer.json
+++ b/composer.json
@@ -7,7 +7,8 @@
         "php": ">=7.0.0",
         "react/event-loop": "^0.4.2",
         "react/promise": "^2.4",
-        "phpcurl/curlwrapper": "^1.0"
+        "phpcurl/curlwrapper": "^1.0",
+        "react/stream": "^0.4.4"
     },
     "require-dev": {
         "phpunit/phpunit": "5.*"
