--- a/composer.json
+++ b/composer.json
@@ -7,6 +7,7 @@
         "php": ">=7.0.0",
         "react/event-loop": "^0.4",
         "react/stream": "^0.7",
+        "react/promise": "^2.5.1",
         "phpcurl/curlwrapper": "^1.0",
         "php-http/httplug": "^1.1.0"
     },
