--- a/composer.json
+++ b/composer.json
@@ -4,15 +4,14 @@
     "type": "library",
 
     "require": {
-        "php": ">=7.0.0",
-        "react/event-loop": "^0.4",
-        "react/stream": "^0.7",
-        "react/promise": "^2.5.1",
-        "phpcurl/curlwrapper": "^1.0",
-        "php-http/httplug": "^1.1.0"
+        "php": ">=7.1.0",
+        "react/event-loop": "^1.0.0",
+        "react/stream": "^1.0.0",
+        "react/promise": "^2.7.0",
+        "phpgt/curl": "dev-master"
     },
     "require-dev": {
-        "phpunit/phpunit": "5.*"
+        "phpunit/phpunit": "7.3.*"
     },
 
     "license": "MIT",
@@ -32,7 +31,6 @@
 
     "keywords": [
         "http",
-        "httplug",
         "fetch",
         "async",
         "asynchronous",
