--- a/.scrutinizer.yml
+++ b/.scrutinizer.yml
@@ -1,14 +1,14 @@
 build:
   environment:
     php:
-      version: 7.0.8
+      version: 7.1.0
   tests:
     override:
-      -
-        command: 'vendor/bin/phpunit --coverage-clover=coverage'
-        coverage:
-          file: 'coverage'
-          format: 'php-clover'
+    -
+      command: 'vendor/bin/phpunit test/unit --coverage-clover coverage --whitelist src'
+      coverage:
+        file: 'coverage'
+        format: 'php-clover'
 
 checks:
   php:
@@ -17,5 +17,5 @@ checks:
 
 filter:
   excluded_paths:
-    - test/*
-    - vendor/*
+  - test/*
+  - vendor/*
