--- a/composer.json
+++ b/composer.json
@@ -1,44 +1,49 @@
 {
-    "name": "phpgt/fetch",
-    "description": "Asynchronous HTTP client with promises for PHP 7 applications.",
-    "type": "library",
+	"name": "phpgt/fetch",
+	"description": "Asynchronous HTTP client with promises for PHP 7 applications.",
+	"type": "library",
+	"license": "MIT",
 
-    "require": {
-        "php": ">=7.1.0",
-        "react/event-loop": "^1.0.0",
-        "react/stream": "^1.0.0",
-        "react/promise": "^2.7.0",
-        "phpgt/curl": "dev-master"
-    },
-    "require-dev": {
-        "phpunit/phpunit": "7.3.*"
-    },
+	"require": {
+		"php": ">=7.1.0",
+		"psr/http-message": "^1.0",
+		"php-http/promise": "^1.0.0",
+		"react/event-loop": "^1.0.0",
+		"react/stream": "^1.0.0",
+		"react/promise": "^2.7.0",
+		"phpgt/curl": "dev-master"
+	},
+	"require-dev": {
+		"phpunit/phpunit": "7.3.*"
+	},
+	"autoload": {
+		"psr-4": {
+			"Gt\\Fetch\\": "./src"
+		}
+	},
+	"autoload-dev": {
+		"psr-4": {
+			"Gt\\Fetch\\Test\\": "./test/unit"
+		}
+	},
 
-    "license": "MIT",
+	"authors": [
+		{
+			"name": "Greg Bowler",
+			"email": "greg.bowler@g105b.com"
+		}
+	],
 
-    "authors": [
-        {
-            "name": "Greg Bowler",
-            "email": "greg.bowler@g105b.com"
-        }
-    ],
-
-    "autoload": {
-        "psr-4": {
-            "Gt\\Fetch\\": "./src"
-        }
-    },
-
-    "keywords": [
-        "http",
-        "fetch",
-        "async",
-        "asynchronous",
-        "xmlhttprequest",
-        "ajax",
-        "get",
-        "post",
-        "curl",
-        "curl_multi"
-    ]
+	"keywords": [
+		"http",
+		"fetch",
+		"async",
+		"asynchronous",
+		"xmlhttprequest",
+		"ajax",
+		"get",
+		"post",
+		"curl",
+		"curl_multi"
+	]
 }
