--- a/composer.json
+++ b/composer.json
@@ -8,6 +8,7 @@
 		"php": ">=7.1.0",
 		"ext-curl": "*",
 		"psr/http-message": "^1.0",
+		"php-http/httplug": "^1.1",
 		"php-http/promise": "^1.0.0",
 		"react/event-loop": "^1.0.0",
 		"react/stream": "^1.0.0",
