--- a/composer.json
+++ b/composer.json
@@ -19,11 +19,8 @@
 		"phpgt/curl": "dev-master",
 
 		"php-http/httplug": "^1.1",
-		"php-http/promise": "^1.0.0",
-
-		"react/event-loop": "^1.0.0",
-		"react/stream": "^1.0.0",
-		"react/promise": "^2.7.0"
+		"react/promise": "^2.7",
+		"react/event-loop": "^1.0"
 	},
 
 	"require-dev": {
