--- a/composer.json
+++ b/composer.json
@@ -19,7 +19,7 @@
 		"phpgt/curl": "dev-master",
 
 		"php-http/httplug": "^1.1",
-		"react/promise": "^2.7",
+		"react/promise": "2.*",
 		"react/event-loop": "^1.0"
 	},
 
