--- a/composer.json
+++ b/composer.json
@@ -18,13 +18,13 @@
 		"phpgt/http": "dev-master",
 		"phpgt/curl": "dev-master",
 
-		"php-http/httplug": "^1.1 || ^2.0",
+		"php-http/httplug": "^2.0",
 		"react/promise": "2.*",
 		"react/event-loop": "^1.0"
 	},
 
 	"require-dev": {
-		"phpunit/phpunit": "7.* || 8.*"
+		"phpunit/phpunit": "8.*"
 	},
 
 	"autoload": {
