--- a/composer.json
+++ b/composer.json
@@ -22,7 +22,8 @@
 	},
 
 	"require-dev": {
-		"phpunit/phpunit": "8.*"
+		"phpunit/phpunit": "9.*",
+		"phpstan/phpstan": ">=0.12.42"
 	},
 
 	"autoload": {
@@ -33,7 +34,7 @@
 
 	"autoload-dev": {
 		"psr-4": {
-			"Gt\\Fetch\\Test\\": "./test/unit"
+			"Gt\\Fetch\\Test\\": "./test/phpunit"
 		}
 	},
 
