--- a/composer.json
+++ b/composer.json
@@ -56,5 +56,12 @@
 		"post",
 		"curl",
 		"curl_multi"
+	],
+	
+	"funding": [
+		{
+			"type": "github",
+			"url": "https://github.com/sponsors/PhpGt"
+		}
 	]
 }
