--- a/composer.json
+++ b/composer.json
@@ -1,6 +1,6 @@
 {
 	"name": "phpgt/fetch",
-	"description": "Asynchronous HTTP client with promises for PHP 7 applications.",
+	"description": "Asynchronous HTTP client with promises.",
 	"type": "library",
 	"license": "MIT",
 
@@ -22,8 +22,8 @@
 	},
 
 	"require-dev": {
-		"phpunit/phpunit": "9.*",
-		"phpstan/phpstan": ">=0.12.42"
+		"phpstan/phpstan": "v1.8.0",
+		"phpunit/phpunit": "v9.5.21"
 	},
 
 	"autoload": {
@@ -57,7 +57,7 @@
 		"curl",
 		"curl_multi"
 	],
-	
+
 	"funding": [
 		{
 			"type": "github",
