build: update dependencies

--- a/composer.json
+++ b/composer.json
@@ -14,7 +14,7 @@
 		"ext-curl": "*",
 		"ext-json": "*",
 		"phpgt/async": "^v0.1",
-		"phpgt/promise": "dev-21-rejection as v2.0.0",
+		"phpgt/promise": "dev-master as v2.0.0",
 		"phpgt/http": "^v1.1",
 		"phpgt/curl": "^v3.0",
 		"phpgt/json": "^v1.1",
