--- a/composer.json
+++ b/composer.json
@@ -10,15 +10,15 @@
 	},
 
 	"require": {
-		"php": ">=7.2",
+		"php": ">=8.1",
 		"ext-curl": "*",
 		"ext-json": "*",
-		"phpgt/http": "*",
-		"phpgt/curl": "*",
-
-		"php-http/httplug": "^2.0",
-		"react/promise": "2.*",
-		"react/event-loop": "^1.0"
+		"phpgt/async": "dev-master",
+		"phpgt/promise": "dev-master as v2.0.0",
+		"phpgt/http": "^v1.1",
+		"phpgt/curl": "^v3.0",
+		"phpgt/json": "^v1.1",
+		"php-http/httplug": "^2.3"
 	},
 
 	"require-dev": {
