--- a/composer.json
+++ b/composer.json
@@ -15,15 +15,17 @@
 		"ext-json": "*",
 		"phpgt/async": "dev-master",
 		"phpgt/promise": "dev-master as v2.0.0",
-		"phpgt/http": "^v1.1",
-		"phpgt/curl": "^v3.0",
-		"phpgt/json": "^v1.1",
+		"phpgt/http": "^1.1",
+		"phpgt/curl": "^3.1",
+		"phpgt/json": "^1.2",
 		"php-http/httplug": "^2.3"
 	},
 
 	"require-dev": {
-		"phpstan/phpstan": "v1.8",
-		"phpunit/phpunit": "v9.5"
+		"phpstan/phpstan": "^1.8",
+		"phpunit/phpunit": "^10.0",
+		"phpmd/phpmd": "^2.13",
+		"squizlabs/php_codesniffer": "^3.7"
 	},
 
 	"autoload": {
