--- a/composer.json
+++ b/composer.json
@@ -4,21 +4,15 @@
 	"type": "library",
 	"license": "MIT",
 
-	"provide": {
-		"php-http/client-implementation": "1.0",
-		"php-http/async-client-implementation": "1.0"
-	},
-
 	"require": {
 		"php": ">=8.1",
 		"ext-curl": "*",
 		"ext-json": "*",
 		"phpgt/async": "dev-master",
-		"phpgt/promise": "dev-master as v2.0.0",
+		"phpgt/promise": "^v2.2.1",
 		"phpgt/http": "^v1.1",
 		"phpgt/curl": "^v3.0",
-		"phpgt/json": "^v1.1",
-		"php-http/httplug": "^2.3"
+		"phpgt/json": "^v1.1"
 	},
 
 	"require-dev": {
@@ -46,6 +40,7 @@
 	],
 
 	"keywords": [
+		"http-client",
 		"http",
 		"fetch",
 		"async",
