test: upgrade to latest phpunit

--- a/composer.json
+++ b/composer.json
@@ -16,8 +16,8 @@
 	},
 
 	"require-dev": {
-		"phpstan/phpstan": "v1.8",
-		"phpunit/phpunit": "v9.5"
+		"phpstan/phpstan": "^1.10",
+		"phpunit/phpunit": "^10.1"
 	},
 
 	"autoload": {
