ci: phpstan level 6

--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -106,6 +106,7 @@ jobs:
         with:
           php_version: ${{ matrix.php }}
           path: src/
+          level: 6
 
   phpmd:
     runs-on: ubuntu-latest
