feature: allow redirect=error fetch mode closes #6

--- a/composer.json
+++ b/composer.json
@@ -8,8 +8,8 @@
 		"php": ">=8.1",
 		"ext-curl": "*",
 		"ext-json": "*",
-		"phpgt/async": "dev-master",
-		"phpgt/promise": "^2.2.1",
+		"phpgt/async": "^1.0",
+		"phpgt/promise": "^2.2.3",
 		"phpgt/http": "^1.1",
 		"phpgt/curl": "^3.1.1",
 		"phpgt/json": "^1.2",
