--- a/composer.json
+++ b/composer.json
@@ -8,9 +8,9 @@
 		"php": ">=8.1",
 		"ext-curl": "*",
 		"ext-json": "*",
-		"phpgt/async": "dev-master",
-		"phpgt/promise": "^2.2.1",
-		"phpgt/http": "^1.1",
+		"phpgt/async": "^1.0",
+		"phpgt/promise": "^2.2.3",
+		"phpgt/http": "^1.2",
 		"phpgt/curl": "^3.1.1",
 		"phpgt/json": "^1.2",
 		"phpgt/propfunc": "^1.0"
@@ -18,7 +18,7 @@
 
 	"require-dev": {
 		"phpstan/phpstan": "^1.10",
-		"phpunit/phpunit": "^10.1",
+		"phpunit/phpunit": "^10.2",
 		"phpmd/phpmd": "^2.13",
 		"squizlabs/php_codesniffer": "^3.7"
 	},
