--- a/composer.json
+++ b/composer.json
@@ -10,7 +10,7 @@
 		"ext-json": "*",
 		"phpgt/async": "^1.0",
 		"phpgt/promise": "^2.2.3",
-		"phpgt/http": "dev-220-async as v1.2.2",
+		"phpgt/http": "^1.3",
 		"phpgt/curl": "^3.1.1",
 		"phpgt/json": "^1.2",
 		"phpgt/propfunc": "^1.0"
